[package]
name = "bomberman-wasm"
description = "Bomberman clone with Rust-Wasm"
version = "0.5.0"
authors = ["Victor Lee <victorlee228@gmail.com>"]
repository = "https://github.com/soofm/bomberman-wasm.git"
license = "MIT"
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
console_error_panic_hook = { version = "0.1.1", optional = true }
js-sys = "0.3.20"
rand = { version = "0.6", features = ["wasm-bindgen"] }
wasm-bindgen = "0.2.42"

[dependencies.web-sys]
version = "0.3.4"

[dev-dependencies]
wasm-bindgen-test = "0.2.43"